<resources>
    <string name="app_name">TV-babbel</string>
    <string name="channels_title">TV-babbel</string>
    <string name="channels_message">Chatta med andra och kommentera det som visas på TV!\nFölj reglerna och var vänliga mot varandra.\n
        Appen är under utveckling!</string>
    <string name="launcher_title">Välkommen till TV-babbel!</string>
    <string name="launcher_subtitle">Innan du börjar använda appen, läs och acceptera integritetspolicyn och villkoren.</string>
    <string name="launcher_button_text">Jag har läst och godkänner</string>
    <string name="launcher_button_pp">Integritetspolicy</string>
    <string name="terms">Villkor</string>
    <string name="outdated_app_version">Uppdatera appen till den senaste versionen!</string>
    <string name="message_hint">Skriv något</string>
    <string name="message_menu_copy">Kopiera</string>
    <string name="message_menu_report">Anmäl</string>
    <string name="message_menu_delete">Radera</string>
    <string name="message_menu_purge">Radera allt från</string>
    <string name="message_menu_block">Blockera</string>
    <string name="message_menu_unblock">Avblockera</string>
    <string name="message_menu_report_confirm">Är du säker på att du vill rapportera det här meddelandet för granskning?</string>
    <string name="message_menu_block_confirm">Är du säker på att du vill blockera användaren?</string>
    <string name="message_menu_delete_confirm">Är du säker på att du vill radera meddelandet?</string>
    <string name="message_menu_unblock_confirm">Är du säker på att du vill avblockera användaren?</string>
    <string name="message_menu_purge_confirm">Är du säker på att du vill radera alla meddelanden från denna användare?</string>
    <string name="block_for_2min">Blockera i 2 minuter</string>
    <string name="block_for_5min">Blockera i 5 minuter</string>
    <string name="block_for_15min">Blockera i 15 minuter</string>
    <string name="block_for_30min">Blockera i 30 minuter</string>
    <string name="block_for_60min">Blockera i 60 minuter</string>
    <string name="block_for_3h">Blockera i 3 timmar</string>
    <string name="block_for_6h">Blockera i 6 timmar</string>
    <string name="block_for_12h">Blockera i 12 timmar</string>
    <string name="block_for_24h">Blockera i 24 timmar</string>
    <string name="block_for_3d">Blockera i 3 dagar</string>
    <string name="block_for_7d">Blockera i 7 dagar</string>
    <string name="block_for_14d">Blockera i 14 dagar</string>
    <string name="block_for_30d">Blockera i 30 dagar</string>
    <string name="block_for_3mon">Blockera i 3 månader</string>
    <string name="message_reported">Tack för din anmälan!</string>
    <string name="message_deleted">Raderad!</string>
    <string name="message_deleted_error">Fel: det gick inte att radera!</string>
    <string name="send">Skicka</string>
    <string name="edit">Ändra</string>
    <string name="profile_me">Min profilbild</string>
    <string name="profile_other">Annan persons profilbild</string>
    <string name="channel_text">Meddelanden idag: %1$d</string>
    <string name="channel_menu_help">Hjälp</string>
    <string name="channel_menu_reports">Rapporteringar</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="cancel">Avbryt</string>
    <string name="my_profile">Min profil</string>
    <string name="about">Om</string>
    <string name="about_login">Test</string>
    <string name="reports_menu_refresh">Uppdatera</string>
    <string name="reports_delete">Radera meddelandet</string>
    <string name="reports_edit">Ändra meddelandet</string>
    <string name="reports_ignore">Ta bort anmälan</string>
    <string name="profile_allowed_digits">abcdefghijklmnopqrstuvwxyzåäöABCDEFGHIJKLMNOPQRSTUVWXYZÅÄÖ0123456789-_</string>
    <string name="profile_username_hint">Visningsnamn</string>
    <string name="profile_username_text">Ditt visningsnamn kan vara 3 till 25 tecken långt och innehålla bokstäver, siffor, - och _</string>
    <string name="profile_user_id">Ditt användar-ID: %1$s</string>
    <string name="profile_save">Uppdatera profil</string>
    <string name="profile_saved">Profil uppdaterad!</string>
    <string name="profile_save_already_taken">Fel: det namnet är upptaget!</string>
    <string name="fel">Fel: %1$s</string>
    <string name="about_text">TV-babbel är en app där du kan kommentera och diskutera med andra användare det som visas på TV.\n\nVälj en kanal och diskutera det som visas där!\n\nGamla meddelanden raderas automatiskt.</string>
    <string name="about_rules">Chatt-regler</string>
    <string name="about_rules_content">
        1. Appen är till för att diskutera och kommentera det som visas på TV.\n\n
        2. Använd rätt kanal och håll dig till ämnet.\n\n
        3. Var vänlig mot andra användare och personer eller grupper som diskuteras och visas på TV.\n\n
        4. Skicka inga hot, trakasserier eller andra slags olämpliga meddelanden.\n\n
        5. Skicka inte överdrivet många emojis.\n\n
        6. Skicka inga personuppgifter, mobilnummer, adresser eller orelaterade länkar\n\n
        7. Spamma inte.\n\n
    </string>
    <string name="privacy_policy">Integritetspolicy\n\n
        Vilken information samlar vi in?\n
        - Grundläggande kontoinformation: Det visningsnamn du väljer kommer alltid vara tillgängligt för alla som använder appen.\n
        - Inlägg och annan tillgänglig information: Allt du skriver i appen är publikt. När du skapar ett nytt inlägg sparas datum och tid för meddelandet.\n
        - Kakor och annonserings-ID: När du använder appen visas annonser. Dessa använder kakor och ditt annonserings-ID för att visa dig relevanta annonser.\n
        - IP-adresser och annan metadata: När du använder appen sparar vi din IP-adress. Vi kan även spara serverloggar som kan inkludera din IP-adress.\n\n

        Vad använder vi din information till?\n
        Din information kan användas till följande saker:\n
        - Din information används endast för att kunna erbjuda dig de grundläggande funktionerna i tjänsten och för att förhindra missbrukande av tjänsten och våra servrar.\n
        - För att visa dig relevanta annonser.\n
        - För moderering av tjänsten. Vi kan använda din information, och jämföra t.ex. IP-adresser för att förhindra omkringående av bannade konton eller liknande.\n\n

        Hur skyddar vi din information?\n
        - Vi tillämpar ett flertal säkerhetsåtgärder för att bibehålla säkerheten av din information. All trafik är krypterad med SSL/TLS.\n\n

        Hur länge sparar vi data?\n
        - Vi kommer att försöka så långt som möjligt:\n
        — Spara serverloggar, inkluderat IP-adresser och alla förfrågningar till denna servern inte längre än 6 månader efter gränsen för hur länge loggar sparas.\n
        — Spara IP-adresser kortare än 12 månader.\n\n

        Du kan efterfråga ett utdrag av din information, inkluderat din media, inlägg och personlig information.\n
        Du kan när som helst radera ditt konto genom att kontakta oss. Uppge ditt visningsnamn eller användar-ID.\n\n

        Använder vi kakor?\n
        - Ja, appen använder kakor. Kakor är små filer som innehåller information. Dessa kakor möjliggör appen och dess tjänster att komma ihåg din enhet och associera det med ditt registrerade konto.
        Vi använder kakor för att förstå och spara dina preferenser för framtida besök och för att visa annonser.\n\n

        Delar vi information med tredjepart?\n
        - Data som överförs till tredje-part är kakor och annonserings-ID:t. Användarikoner genereras med hjälp av Gravatar.\n
        Vi säljer, delar eller på annat sätt överför inte din övriga personliga information till tredjepart.
        Din data lagras på servrar i Sverige, men kan komma att delas med externa servrar och användare som befinner sig både i Sverige och i andra länder.
        Din data kan kommas att delas med (lokala) myndigheter, polisväsenden och andra aktörer i händelse av misstanke om brott och för att följa de lagar och regler som gäller.
\n\n
        Barns användande av tjänsten\n
        - Våra tjänster är tillgängliga för alla svenska invånare som är över 13 år gamla. Om du är under 13 år gammal ska du fått godkännande av en vårdnadshavare/förälder innan du får använda tjänsten. Bor du i ett annat land än Sverige, men inom EU/EEA, behöver du godkännande från en vårdnadshavare om du är yngre än 14.
\n\n
        Ändringar till vår integritetspolicy samt Användarvillkor\n
        - Om vi ändrar våra villkor eller policys kommer vi att visa dessa ändringar här.\n\n
    </string>
</resources>