<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="10dp"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="3dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgIcon"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_marginBottom="22dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:textAlignment="center"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:text="@string/about_text"
                        android:textAlignment="center"
                        android:textSize="11sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView2"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="3dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:text="@string/about_rules"
                        android:textAlignment="center"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:text="@string/about_rules_content"
                        android:textAlignment="center"
                        android:textSize="11sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView2"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="24dp"
                app:cardElevation="3dp"
                app:contentPadding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="20dp">

                    <TextView
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:text="@string/about_rules"
                        android:textAlignment="center"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:text="@string/about_rules_content"
                        android:textAlignment="center"
                        android:textSize="11sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>